Add read me and mvn plugin to run from cli

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M4</version>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <mainClass>com.qlassalle.application.Main</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
